bootstrap/kubernetes/apps/security/bitwarden/app/bwn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  namespace: security
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
      app.kubernetes.io/instance: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli
        app.kubernetes.io/instance: bitwarden-cli
    spec:
      containers:
        - name: bitwarden-cli
          image: mdcravero/bitwarden-cli:simple
          imagePullPolicy: Always


          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /home/.config/bitwarden-cli

      nodeSelector:
        type: wk-amd

      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: btw-config
