bootstrap/kubernetes/apps/security/bitwarden/app/btw-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: security
  name: bitwarden-cli-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden-cli
      app.kubernetes.io/name: bitwarden-cli
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels: {} # Allow all pods in the same namespace
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: security
      ports:
        - protocol: TCP
          port: 8087
  egress:
    # Allow all egress traffic for DNS lookups and connection to Bitwarden servers
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
